# viri

./: Cargo.toml  design.md  quick-test.sh  reverse.toml
macros/: Cargo.toml
macros/src/: async_fns.rs  attr.rs  config.rs  dyn_serde.rs  edit_history_test.rs  extension.rs  flag.rs  history_core_test.rs  id.rs  init_expr.rs  lib.rs  named_fn.rs  type_sig.rs  typed.rs
src/: any.rs  borrow.rs  clap.yml  config.rs  container.rs  event.rs  fs.rs  init.rs  keys.rs  lock.rs  logger.rs  macros.rs  main-temp.rs  main.rs  modes.rs  never.rs  panic.rs  signal.rs  size.rs  term.rs  trie.rs  utils.rs
src/config/: attr.rs  mod.rs  named_fn.rs
src/container/: cmd.rs  config.rs  context.rs  mod.rs  params.rs  signal.rs
src/container/bottom_bar/: component.rs  condition.rs  layout.rs  mod.rs  time.rs
src/container/paint/: mod.rs  painter.rs  styled.rs  symbol.rs
src/dispatch/: builtin.rs  load.rs  mod.rs  typed.rs
src/event/: key.rs  mod.rs  mods.rs  mouse.rs
src/extensions/: file.rs  mod.rs  text.rs
src/keys/: combinators.rs  component.rs  de.rs  mod.rs  modifier_set.rs  set.rs  sources.rs  tests.rs
src/mode/: config.rs  handler.rs  insert.rs  macros.rs  mod.rs
src/mode/normal/: combinators.rs  delete.rs  mod.rs  movement.rs  scroll.rs
src/modes/: mod.rs  ser_de.rs
src/runtime/: mod.rs  painter.rs  panic.rs
src/text/: cache.rs  cursor.rs  diff.rs  grouped_history.rs  history.rs  max_vec.rs  mod.rs  ranged.rs  raw.rs  sizes.rs  utf8.rs
src/text/diff/: collect.rs  max_vec.rs  mod.rs
src/text/diff/history/: cause.rs  marker.rs  mod.rs  ranged.rs  tests.rs
src/text/history_core/: cause.rs  marker.rs  mod.rs  pos_map.rs  ranged.rs  tests.rs
src/text/objects/: byte_tree.rs  mod.rs  shared.rs  slice.rs
src/text/objects/encoding/: mod.rs  utf8.rs
src/text/objects/text_tree/: cache.rs  line.rs  lru.rs  mod.rs
src/text/ranged/: core.rs  index.rs  mod.rs  rc.rs  set.rs  std_ranged.rs
src/view/: default_keybindings.yml  file.rs  mod.rs  splash.rs
src/view/file/: default_keybindings.yml  mod.rs
src/views/: buffer.rs  file.rs  filetree.rs  macros.rs  mod.rs  split.rs
src/views/file/: edits.rs  executor.rs  handle.rs  lock.rs  macros.rs  mod.rs  modes.rs  syntax.rs
src/views/modes/: insert.rs  mod.rs  normal.rs
src/views/modes/normal/: combinators.rs  delete.rs  mod.rs  movement.rs
test/: redirect.sh  viri.yml
