[package]
name = "viri"
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local utilities
viri-macros = { path = "macros" }

# External stuff
ansi_term = "0.12"
arc-swap = "0.4"
backtrace = "0.3"
chrono = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
crossterm = { git = "https://github.com/sharnoff/crossterm", branch = "io-results", features = ["serde", "event-stream"] }
inventory = "0.1"
lazy_static = "1.4"
libc = "0.2"
lock_api = "0.3"
log = { version = "0.4", features = ["serde"] }
parking_lot = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
signal-hook = { version = "0.1.16", features = ["tokio-support"] }
smallstr = "0.2"
syntect = { version = "4.2.0", default-features = false, features = ["regex-fancy", "parsing"] }
tokio = { version = "0.2", features = ["sync", "fs", "stream", "rt-threaded", "rt-core", "io-util", "io-std"] }
unicode-segmentation = "1.6"
unicode-width = "0.1.7"
uuid = { version = "0.8", features = ["v4"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = true
