[package]
name = "viri"
# @def viri-version v0.1.0
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"

[dev-dependencies]
itertools = "0.10"

[dependencies]
# Local utilities
viri-macros = { path = "macros" }

# External stuff
ansi_term = { git = "https://github.com/sharnoff/rust-ansi-term", branch = "master" }
arc-swap = "1.0"
backtrace = "0.3"
chrono = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
crossterm = { git = "https://github.com/sharnoff/crossterm", branch = "io-results", features = ["serde", "event-stream"] }
inventory = "0.1"
lazy_static = "1.4"
libc = "0.2"
log = { version = "0.4", features = ["serde"] }
maplit = "1.0.2"
# num_bigint = "0.3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = { git = "https://github.com/sharnoff/serde-yaml", branch = "public-Deserializer" }
# signal-hook = { version = "0.1.16" }
smallstr = "0.2"
smallvec = "1.5"
# syntect = { version = "4.2.0", default-features = false, features = ["regex-fancy", "parsing"] }
tokio = { version = "^0.3.5", features = ["sync", "fs", "stream", "rt", "rt-multi-thread", "io-util", "io-std", "time"] }
unicode-segmentation = "1.6"
unicode-width = "0.1.7"
# uuid = { version = "0.8", features = ["v4"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = true
