[package]
name = "viri-macros"
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.5"
syn = { version = "^1.0.43", features = ["full"] }
proc-macro2 = "1"
quote = "1.0.7"
